syntax = "proto3";
package hello;

option go_package = "hello/hellopb";

message Hello {
    string first_name = 1;
    string prefix = 2;
}

message HelloRequest {
    Hello hello = 1;
}

message HelloResponse {
    string custom_hello = 1;
}

message HelloManyLanguagesRequest {
    Hello hello = 1;
}

message HelloManyLanguagesResponse {
    string hello_language = 1;
}

message GoodbyeRequest {
    Hello hello = 1;
}

message HellosGoodbyeResponse {
    string goodbye = 1;
}

message HellosGoodbyeRequest {
    Hello hello = 1;
}

message GoodbyeResponse {
    string goodbye = 1;
}

service HelloService {
    //Unary
    rpc Hello(HelloRequest) returns (HelloResponse){};

    //Server Streaming
    rpc HelloManyLanguages(HelloManyLanguagesRequest) returns (stream HelloManyLanguagesResponse){};

    //Clien Streaming
    //Send many hellos and get a single response
    rpc HellosGoodbye(stream HellosGoodbyeRequest) returns (HellosGoodbyeResponse){};

    //Bidirectional Streaming
    rpc Goodbye(stream GoodbyeRequest) returns (stream GoodbyeResponse){}; 
}